example/tests/compile_errors/01_bad_item.rs
use axum_autoroute::autoroute;

#[autoroute]
struct A {

}

#[autoroute]
enum B {

}

#[autoroute]
mod C {

}

fn main() {}